fixed border issues on small viewport

--- a/styles.css
+++ b/styles.css
@@ -379,6 +379,8 @@ nav{
   grid-column: 1;
   grid-row: 2;
   height: 3em;
+  padding: .5em 0px;
+
 }
 
 #nav-container{
@@ -422,7 +424,7 @@ justify-content: space-between;
     grid-row: 3;
     grid-column: 1;
     width: 100%;
-    border: 3px var(--secondary-color) solid;
+    border: none;
     box-shadow: none;
     display: inline-flex;
     flex-direction: row;
@@ -433,7 +435,7 @@ justify-content: space-between;
   
   .card{
     position: relative;
-    border: 15px var(--tertiary-color) solid;
+    border: 5px var(--tertiary-color) solid;
     min-width: 200px;
     width: 100%;
     margin: 0px;
@@ -456,13 +458,6 @@ justify-content: space-between;
     width: 100%;
   }
   
-  .card-photo{
-    /* background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-    border-bottom: 2px var(--tertiary-color) solid; */
-  }
   .card-text-box{
     grid-row: 3;
     position: relative;
@@ -473,8 +468,6 @@ justify-content: space-between;
     align-items: middle;
     font-size: 1em;
   }
-  
-  
   
   
   #full-stack-photo{
